# git-summary

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  rust.yml  tailwind.config.js
.github/workflows/: deploy.yml
src/: main.rs  urlize.rs
src/templates/: base.html  border.html  index.html  output.css  simple-summary.html
summary/: Cargo.toml  build.rs  tailwind.config.js
summary/src/: main.rs
summary/templates/: index.html
