[package]
name = "git-summary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "git-summary"
#path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
git2 = "0.18.1"
tera = "1.19.1"
regex = "1.10.2"
askama = "0.12.1"
minijinja = { version = "1.0.12", features = ["loader", "json"] }
once_cell = "1.19.0"
chrono = "0.4.31"
minijinja-embed = "1.0.12"

[build-dependencies]
minijinja-embed = "1.0.12"